--- a/#scorse/scss/style.scss
+++ b/#scorse/scss/style.scss
@@ -15,7 +15,6 @@ header {
   max-width: 1100px;
   margin: 0 auto;
   padding: 0 10px;
-  //position: relative;
 }
 
 .services__row {
@@ -62,18 +61,30 @@ header {
 
 .social_link_1_appstore {
   background: url("../img/appstor.svg") 50% 50% / contain no-repeat;
+  &:hover {
+    background: url("../img/appstor-hover.svg") 50% 50% / contain no-repeat;
+  }
 }
 
 .social_link_1_playmarket {
   background: url("../img/playmarket.svg") 50% 50% / contain no-repeat;
+  &:hover {
+    background: url("../img/playmarket-hover.svg") 50% 50% / contain no-repeat;
+  }
 }
 
 .social_link_1_twitter {
   background: url("../img/twitter.svg") 50% 50% / contain no-repeat;
+  &:hover {
+    background: url("../img/twitter-hover.svg") 50% 50% / contain no-repeat;
+  }
 }
 
 .social_link_1_facebook {
   background: url("../img/facebook.svg") 50% 50% / contain no-repeat;
+  &:hover {
+    background: url("../img/facebook-hover.svg") 50% 50% / contain no-repeat;
+  }
 }
 
 .services_futures__row {
@@ -90,6 +101,9 @@ header {
     font-weight: 600;
     font-size: 16px;
     line-height: 20px;
+    &:hover {
+      color: #cc005e;
+    }
   }
   color: #fff;
 }
@@ -109,6 +123,9 @@ header {
   }
   a {
     text-transform: uppercase;
+    &:hover {
+      color: #cc005e;
+    }
   }
   & > li {
     span {
@@ -184,7 +201,6 @@ header {
 
 .main_header__row {
   position: relative;
-  //width: 100%;
   top: 0;
   z-index: 1;
   display: -webkit-flex;
@@ -199,6 +215,7 @@ header {
 }
 
 .main_header__item {
+  height: 100%;
   &:nth-child(1) {
     padding: 20px 0 20px 30px;
   }
@@ -223,11 +240,42 @@ header {
   display: flex;
   justify-content: flex-end;
   padding: 0 38px 0 0;
+  position: relative;
   li {
-    margin-left: 30px;
+    margin-left: 25px;
     &:first-child {
       margin-left: 0;
     }
+  }
+  a {
+    &:hover {
+      color: #cc005e;
+    }
+  }
+  .main_header__search {
+    background: #fff;
+    padding: 0 15px;
+    &:hover {
+      .search__window {
+        width: 100%;
+      }
+    }
+  }
+  .search__form {
+    position: absolute;
+    //right: 16;
+    height: 100%;
+
+    .search__window {
+      width: 1px;
+    }
+  }
+  .main_header__sersh_submit {
+    position: absolute;
+    z-index: 1;
+    width: 16px;
+    height: 16px;
+    background: url("../img/search.svg") 50% 50% / 100% no-repeat;
   }
 }
 
@@ -239,6 +287,7 @@ header {
   font-size: 16px;
   color: #fff;
   position: relative;
+  transition-duration: 400ms;
   &:before {
     content: "";
     position: absolute;
@@ -251,17 +300,28 @@ header {
     border: 7px solid #ffffff;
     border-radius: 50%;
   }
+  &:after {
+    content: "";
+    position: absolute;
+    display: inline-block;
+    height: 100%;
+    width: 29%;
+    right: 0;
+    border-radius: 10px;
+    z-index: 1;
+    background-color: rgba(#000, 0.1);
+    transition-duration: 400ms;
+  }
+  &:hover:after {
+    width: 87%;
+  }
+  &:hover:before {
+    background: url("../img/download-hower.svg") 50% 50% / 60% no-repeat,
+      #130947;
+  }
 }
 
-.main_screen {
-  //transform: translateY(-36%);
-  width: 100%;
-  top: 0;
-  z-index: 0;
-
-  .container {
-    position: relative;
-  }
+.main_slider {
   .slick-list {
     overflow: hidden;
     width: 100%;
@@ -269,9 +329,11 @@ header {
     position: relative;
   }
   .slick-track {
+    min-height: 700px;
     display: -webkit-flex;
     display: -ms-flex;
     display: flex;
+    position: relative;
   }
   .slick-arrow {
     position: absolute;
@@ -279,16 +341,31 @@ header {
     width: 50px;
     height: 50px;
     z-index: 3;
+    top: calc(35%);
   }
   .slick-arrow.slick-prev {
-    top: calc(50% + 25px);
     right: calc(50% - 480px);
     background: url("../img/arrow-back.svg") 50% 50% / contain no-repeat;
+    &:hover {
+      background: url("../img/arrow-back-hover.svg") 50% 50% / contain no-repeat;
+    }
   }
   .slick-arrow.slick-next {
-    top: calc(50% + 25px);
     right: calc(50% - 535px);
     background: url("../img/arrow-next.svg") 50% 50% / contain no-repeat;
+    &:hover {
+      background: url("../img/arrow-next-hover.svg") 50% 50% / contain no-repeat;
+    }
+  }
+}
+
+.main_screen {
+  transform: translateY(-16%);
+  width: 100%;
+  top: 0;
+  z-index: 0;
+  .container {
+    position: relative;
   }
 }
 
@@ -297,6 +374,7 @@ header {
   width: 100%;
   background: url("../img/main.jpg") 50% 0% / cover no-repeat;
   .container {
+    top: 20px;
   }
   h1 {
     margin-bottom: 10px;
@@ -324,7 +402,7 @@ header {
 }
 
 .main_slider__subitem {
-  flex: 1;
+  flex: 0 1 45%;
 }
 
 .main_slider__button {
@@ -337,6 +415,32 @@ header {
   font-weight: 800;
   font-size: 14px;
   line-height: 17px;
+  position: relative;
+  &:before {
+    content: "";
+    position: absolute;
+    display: inline-block;
+    height: 100%;
+    width: 18%;
+    left: 0;
+    top: 0;
+    z-index: 1;
+    background-color: rgba(#000, 0.1);
+    transition-duration: 400ms;
+  }
+  &:hover:before {
+    width: 87%;
+  }
+  &:after {
+    content: "";
+    position: absolute;
+    top: 0;
+    right: -20%;
+    display: inline-block;
+    height: 100%;
+    width: 1px;
+    background-color: #fff;
+  }
 }
 
 .main_slider__approw {
@@ -354,16 +458,32 @@ header {
     display: inline-block;
     width: 100%;
     height: 100%;
-    background-color: #fff;
+  }
+}
+
+.main_slider__appstore {
+  background: url("../img/appstor.svg") 50% 50% / contain no-repeat;
+  &:hover {
+    background: url("../img/appstor-hover.svg") 50% 50% / contain no-repeat;
+  }
+}
+.main_slider__playmarket {
+  background: url("../img/playmarket.svg") 50% 50% / contain no-repeat;
+  &:hover {
+    background: url("../img/playmarket-hover.svg") 50% 50% / contain no-repeat;
   }
 }
 
 .benefits {
+  max-width: 1100px;
+  margin: 0 auto;
+  transform: translateY(-34%);
+  padding: 0 0 65px;
+  border-bottom: 1px solid #eeeeee;
 }
 
 .benefits_slider {
   position: relative;
-  //  transform: translateY(-50%);
   .slick-list {
     overflow: hidden;
   }
@@ -383,12 +503,35 @@ header {
   img {
     margin: 0 0 16px;
     width: 100%;
+    border-radius: 10px;
   }
   p {
     font-weight: 800;
     font-size: 20px;
     line-height: 24px;
     color: #130947;
+  }
+  .slick-arrow {
+    position: absolute;
+    font-size: 0;
+    width: 50px;
+    height: 50px;
+    z-index: 3;
+    top: calc(33%);
+  }
+  .slick-arrow.slick-prev {
+    left: calc(-55px);
+    background: url("../img/arrow-1-back.svg") 50% 50% / contain no-repeat;
+    &:hover {
+      background: url("../img/arrow-back-hover.svg") 50% 50% / contain no-repeat;
+    }
+  }
+  .slick-arrow.slick-next {
+    right: calc(50% - 605px);
+    background: url("../img/arrow-1-next.svg") 50% 50% / contain no-repeat;
+    &:hover {
+      background: url("../img/arrow-next-hover.svg") 50% 50% / contain no-repeat;
+    }
   }
 }
 
@@ -400,6 +543,7 @@ header {
 }
 
 .partner {
+  margin: -290px 0 0;
 }
 
 .partner__row {
@@ -563,7 +707,29 @@ header {
   line-height: 20px;
   color: #130947;
   text-align: center;
-  background: #f9fbfb;
+  background: #ffffff; /* Old browsers */
+  background: -moz-linear-gradient(
+    top,
+    #ffffff 0%,
+    #ffffff 50%,
+    #f9fbfb 51%,
+    #f9fbfb 100%
+  ); /* FF3.6-15 */
+  background: -webkit-linear-gradient(
+    top,
+    #ffffff 0%,
+    #ffffff 50%,
+    #f9fbfb 51%,
+    #f9fbfb 100%
+  ); /* Chrome10-25,Safari5.1-6 */
+  background: linear-gradient(
+    to bottom,
+    #ffffff 0%,
+    #ffffff 50%,
+    #f9fbfb 51%,
+    #f9fbfb 100%
+  ); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#f9fbfb',GradientType=0 ); /* IE6-9 */
 }
 
 .function__title {
@@ -647,6 +813,21 @@ header {
     border-radius: 50%;
     background: url("../img/appstor-hover.svg") 50% 50% / 60% no-repeat, #fff;
   }
+  &:after {
+    content: "";
+    position: absolute;
+    display: inline-block;
+    height: 100%;
+    width: 10%;
+    right: 0;
+    border-radius: 3px;
+    z-index: 1;
+    background-color: rgba(#000, 0.1);
+    transition-duration: 400ms;
+  }
+  &:hover:after {
+    width: 73%;
+  }
 }
 
 .function__playmarket {
@@ -666,6 +847,21 @@ header {
     height: 30px;
     border-radius: 50%;
     background: url("../img/playmarket-hover.svg") 65% 50% / 60% no-repeat, #fff;
+  }
+  &:after {
+    content: "";
+    position: absolute;
+    display: inline-block;
+    height: 100%;
+    width: 10%;
+    right: 0;
+    border-radius: 3px;
+    z-index: 1;
+    background-color: rgba(#000, 0.1);
+    transition-duration: 400ms;
+  }
+  &:hover:after {
+    width: 73%;
   }
 }
 
@@ -974,6 +1170,9 @@ header {
     font-size: 12px;
     line-height: 15px;
     color: #8d8c8c;
+    &:hover {
+      text-decoration: underline;
+    }
   }
   ul {
     &:last-child {
