--- a/#scorse/scss/style.scss
+++ b/#scorse/scss/style.scss
@@ -29,7 +29,7 @@ header {
 }
 
 .serveces__item {
-  flex: 1 1 50%;
+  //flex: 1 1 50%;
 }
 
 .social_link_1 {
@@ -202,7 +202,7 @@ header {
 .main_header__row {
   position: relative;
   top: 0;
-  z-index: 1;
+  z-index: 4;
   display: -webkit-flex;
   display: -ms-flex;
   display: flex;
@@ -221,10 +221,43 @@ header {
   }
   &:nth-child(2) {
     flex-grow: 1;
+    position: relative;
   }
 }
 
 .main_header_logo {
+}
+
+.burger__menu {
+  display: none;
+  padding: 15px;
+  position: absolute;
+  left: 10px;
+  top: 143px;
+  z-index: 3;
+  background: #fff;
+  transform: translateY(-30%);
+  opacity: 0;
+  visibility: hidden;
+  height: auto;
+  transition-duration: 500ms;
+  ul {
+    text-align: center;
+    li {
+      margin-bottom: 20px;
+      &:last-child {
+        margin-bottom: 0;
+      }
+      a {
+        font-size: 20px;
+      }
+    }
+  }
+  &._active {
+    transform: translateY(0);
+    opacity: 1;
+    visibility: visible;
+  }
 }
 
 .main_header__navigation {
@@ -239,7 +272,7 @@ header {
   display: -ms-flex;
   display: flex;
   justify-content: flex-end;
-  padding: 0 38px 0 0;
+  padding: 0 75px 0 0;
   position: relative;
   li {
     margin-left: 25px;
@@ -252,31 +285,83 @@ header {
       color: #cc005e;
     }
   }
-  .main_header__search {
-    background: #fff;
-    padding: 0 15px;
-    &:hover {
-      .search__window {
-        width: 100%;
-      }
-    }
-  }
-  .search__form {
-    position: absolute;
-    //right: 16;
-    height: 100%;
+}
 
-    .search__window {
-      width: 1px;
+.menu__icon {
+  display: none;
+  z-index: 6;
+  position: absolute;
+  left: 40px;
+  top: -13px;
+  //transform: translate(-30px, 50px);
+  width: 30px;
+  height: 25px;
+  cursor: pointer;
+  span,
+  &::before,
+  &::after {
+    left: 0;
+    position: absolute;
+    height: 10%;
+    width: 100%;
+    transition: all 0.3s ease 0s;
+    background-color: #cc005e;
+  }
+  &::before,
+  &::after {
+    content: "";
+  }
+  &::before {
+    top: 0;
+  }
+  &::after {
+    bottom: 0;
+  }
+  span {
+    top: 40%;
+    transform: scale(1) translate(0, 50%);
+  }
+  &._active {
+    span {
+      transform: scale(0) translate(0, 50%);
+    }
+    &::before {
+      top: 50%;
+      transform: rotate(-45deg) translate(0, -50%);
+    }
+    &::after {
+      bottom: 50%;
+      transform: rotate(45deg) translate(0, 50%);
     }
   }
-  .main_header__sersh_submit {
-    position: absolute;
-    z-index: 1;
-    width: 16px;
-    height: 16px;
-    background: url("../img/search.svg") 50% 50% / 100% no-repeat;
+}
+
+.main_header__search {
+  background: #fff;
+  padding: 0 15px;
+  border-left: 1px solid #bbbbbb;
+  &:hover {
+    .search__window {
+      width: 100%;
+    }
   }
+}
+.search__form {
+  position: absolute;
+  top: 0px;
+  right: 30px;
+  height: 100%;
+
+  .search__window {
+    width: 1px;
+  }
+}
+.main_header__sersh_submit {
+  position: absolute;
+  z-index: 1;
+  width: 16px;
+  height: 16px;
+  background: url("../img/search.svg") 50% 50% / 100% no-repeat;
 }
 
 .main_header__button {
@@ -537,6 +622,35 @@ header {
 
 .benefits_slider_item {
   margin: 0 15px;
+  position: relative;
+  &:after {
+    content: "";
+    position: absolute;
+    display: inline-block;
+    width: 80px;
+    height: 80px;
+    border-radius: 50%;
+    bottom: 30px;
+    right: 30px;
+  }
+}
+
+.benefits_slider_item_1 {
+  &:after {
+    background: url("../img/pc.svg") 50% 50% / 60% no-repeat, #cc005e;
+  }
+}
+
+.benefits_slider_item_2 {
+  &:after {
+    background: url("../img/timer.svg") 50% 50% / 60% no-repeat, #cc005e;
+  }
+}
+
+.benefits_slider_item_3 {
+  &:after {
+    background: url("../img/phone.svg") 50% 50% / 60% no-repeat, #cc005e;
+  }
 }
 
 .slide_imag_1 {
@@ -608,10 +722,10 @@ header {
     &:before {
       content: "";
       position: absolute;
-      top: calc(50% - 112px);
+      top: calc(50% - 150px);
       left: 48px;
       width: 2px;
-      height: 224px;
+      height: 300px;
       background-color: #dd1869;
     }
   }
@@ -738,9 +852,73 @@ header {
 
 .title {
 }
+.video_container {
+  position: relative;
+  padding: 55px 0;
+  .function__video {
+    display: block;
+    width: 100%;
+    object-fit: cover;
+  }
+  .play {
+    position: absolute;
+    display: inline-block;
+    top: calc(50% - 65px);
+    left: calc(50% - 65px);
+    width: 130px;
+    height: 130px;
+    border-radius: 50%;
+    background: url("../img/play.svg") 55% 50% / 30% no-repeat #fff;
+    transition-duration: 500ms;
+    &._playActive {
+      transform: scale(0);
+      opacity: 0;
+    }
 
-.function__video {
-  width: 100%;
+    &:before {
+      content: "";
+      position: absolute;
+      display: inline-block;
+      top: -35px;
+      left: -35px;
+      width: 200px;
+      height: 200px;
+      border-radius: 50%;
+      border: 1px solid #fff;
+      transition-duration: 500ms;
+    }
+    &:after {
+      content: "";
+      position: absolute;
+      display: inline-block;
+      top: -70px;
+      left: -70px;
+      width: 270px;
+      height: 270px;
+      border-radius: 50%;
+      border: 1px solid #fff;
+      transition-duration: 500ms;
+    }
+    &:hover {
+      cursor: pointer;
+      top: calc(50% - 60px);
+      left: calc(50% - 60px);
+      width: 120px;
+      height: 120px;
+      &:before {
+        top: -20px;
+        left: -20px;
+        width: 160px;
+        height: 160px;
+      }
+      &:after {
+        top: -22.5px;
+        left: -22.5px;
+        width: 165px;
+        height: 165px;
+      }
+    }
+  }
 }
 
 .function__title {
@@ -1058,6 +1236,10 @@ header {
   &:last-child {
     margin-right: 0;
   }
+  &:hover {
+    color: #fff;
+    background: #cc005e;
+  }
 }
 
 .try__playmarket {
@@ -1083,6 +1265,10 @@ header {
     height: 30px;
     border-radius: 50%;
     background: url("../img/playmarket.svg") 65% 50% / 60% no-repeat, #cc005e;
+  }
+  &:hover {
+    color: #fff;
+    background: #cc005e;
   }
 }
 
@@ -1264,4 +1450,57 @@ header {
 }
 
 .footer__playmarket {
+}
+
+@media (max-width: 1250px) {
+  .benefits_slider .slick-arrow.slick-prev {
+    left: 15px;
+  }
+  .benefits_slider .slick-arrow.slick-next {
+    right: 14px;
+  }
+}
+
+@media (max-width: 1056px) {
+  .main_header__menu li {
+    margin-left: 15px;
+  }
+  .main_slider .slick-arrow.slick-prev {
+    right: calc(50% - 400px);
+  }
+  .main_slider .slick-arrow.slick-next {
+    right: calc(50% - 455px);
+    background: url("../img/arrow-next.svg") 50% 50% / contain no-repeat;
+  }
+}
+
+@media (max-width: 1000px) {
+  .menu__icon {
+    display: block;
+  }
+  .main_header__navigation {
+    display: none;
+  }
+  .burger__menu {
+    display: block;
+  }
+  .search__form {
+    top: -7px;
+  }
+}
+
+@media (max-width: 800px) {
+  .about_app__row {
+    display: -ms-flex;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+  }
+  .main_slider .slick-arrow.slick-prev {
+    right: calc(50% - 300px);
+  }
+  .main_slider .slick-arrow.slick-next {
+    right: calc(50% - 355px);
+    background: url("../img/arrow-next.svg") 50% 50% / contain no-repeat;
+  }
 }
