--- a/#scorse/scss/style.scss
+++ b/#scorse/scss/style.scss
@@ -1719,4 +1719,8 @@ header {
     max-width: 1100px;
     margin: 0 auto 62px;
   }
+  .about_app__info .item_box::before {
+    top: calc(50% - 175px);
+    height: 350px;
+  }
 }
