--- a/css/style.css
+++ b/css/style.css
@@ -1731,4 +1731,9 @@ header {
     max-width: 1100px;
     margin: 0 auto 62px;
   }
+
+  .about_app__info .item_box::before {
+    top: calc(50% - 175px);
+    height: 350px;
+  }
 }
