--- a/#scorse/scss/style.scss
+++ b/#scorse/scss/style.scss
@@ -28,13 +28,6 @@ header {
   z-index: 1;
 }
 
-.serveces__item {
-  //flex: 1 1 50%;
-}
-
-.social_link_1 {
-}
-
 .social_link_1_row {
   display: -webkit-flex;
   display: -ms-flex;
@@ -168,8 +161,8 @@ header {
     content: "";
     margin-right: 10px;
     display: inline-block;
-    width: 30px;
-    height: 30px;
+    width: 20px;
+    height: 20px;
     background: url("../img/mail.svg") 50% 50% / contain no-repeat;
   }
 }
@@ -225,15 +218,13 @@ header {
   }
 }
 
-.main_header_logo {
-}
-
 .burger__menu {
   display: none;
   padding: 15px;
   position: absolute;
   left: 10px;
   top: 143px;
+  width: 97%;
   z-index: 3;
   background: #fff;
   transform: translateY(-30%);
@@ -242,7 +233,7 @@ header {
   height: auto;
   transition-duration: 500ms;
   ul {
-    text-align: center;
+    text-align: left;
     li {
       margin-bottom: 20px;
       &:last-child {
@@ -348,31 +339,55 @@ header {
 }
 
 .main_header__search {
-  background: #fff;
-  padding: 0 15px;
-  border-left: 1px solid #bbbbbb;
-  &:hover {
-    .search__window {
-      width: 100%;
-    }
+  &:after {
+    content: "";
+    display: inline-block;
+    height: 100%;
+    width: 20px;
+    position: absolute;
+    right: -30px;
+    top: -1px;
+    background-color: rgba(#fff, 0);
   }
 }
 .search__form {
   position: absolute;
   top: 0px;
-  right: 30px;
+  right: 45px;
   height: 100%;
 
+  transition-duration: 500ms;
+
+  &:focus {
+    opacity: 1;
+    .search__window {
+      transform: translateX(0);
+      padding-left: 10px;
+    }
+  }
+  &:hover {
+    opacity: 1;
+    .search__window {
+      transform: translateX(0);
+      padding-left: 10px;
+    }
+  }
   .search__window {
-    width: 1px;
+    width: 250px;
+    padding-left: 50px;
+    transform: translateX(95%);
+    border-left: 1px solid #bbbbbb;
+    transition-duration: 500ms;
   }
 }
 .main_header__sersh_submit {
   position: absolute;
+  display: inline-block;
   z-index: 1;
+  top: 0;
   width: 16px;
   height: 16px;
-  background: url("../img/search.svg") 50% 50% / 100% no-repeat;
+  background: url("../img/search.svg") 50% 50% / 100% no-repeat, #fff;
 }
 
 .main_header__button {
@@ -396,24 +411,8 @@ header {
     border: 7px solid #ffffff;
     border-radius: 50%;
   }
-  &:after {
-    content: "";
-    position: absolute;
-    display: inline-block;
-    height: 100%;
-    width: 29%;
-    right: 0;
-    border-radius: 10px;
-    z-index: 1;
-    background-color: rgba(#000, 0.1);
-    transition-duration: 400ms;
-  }
-  &:hover:after {
-    width: 87%;
-  }
-  &:hover:before {
-    background: url("../img/download-hower.svg") 50% 50% / 60% no-repeat,
-      #130947;
+  &:hover {
+    background-color: #ad0050;
   }
 }
 
@@ -684,9 +683,6 @@ header {
   margin: 0 15px;
 }
 
-.freshly {
-}
-
 .partner__text {
   text-align: center;
   font-weight: 500;
@@ -697,9 +693,6 @@ header {
 
 .about_app {
   padding: 111px 0 206px;
-}
-
-.container {
 }
 
 .about_app__row {
@@ -742,9 +735,8 @@ header {
   }
   .about_app__info_block {
     margin: 0 0 50px;
-  }
-  .info_block_1 {
     position: relative;
+
     &:before {
       content: "";
       position: absolute;
@@ -755,48 +747,33 @@ header {
       height: 90px;
       border-radius: 50%;
       border: 2px solid #dd1869;
+      transition-duration: 500ms;
+    }
+  }
+  .info_block_1 {
+    &:before {
       background: url("../img/devices.svg") 50% 50% / 60% no-repeat, #fff;
     }
     &:hover:before {
-      background: url("../img/devices-hover.svg") 50% 50% / 60% no-repeat
+      background: url("../img/devices-hover.svg") 50% 50% / 60% no-repeat,
         #dd1869;
     }
   }
   .info_block_2 {
-    position: relative;
     &:before {
-      content: "";
-      position: absolute;
-      top: calc(50% - 45px);
-      left: -124px;
-      display: inline-block;
-      width: 90px;
-      height: 90px;
-      border-radius: 50%;
-      border: 2px solid #dd1869;
       background: url("../img/cloud-1.svg") 50% 50% / 60% no-repeat, #fff;
     }
     &:hover:before {
-      background: url("../img/cloud-1-hover.svg") 50% 50% / 60% no-repeat
+      background: url("../img/cloud-1-hover.svg") 50% 50% / 60% no-repeat,
         #dd1869;
     }
   }
   .info_block_3 {
-    position: relative;
     &:before {
-      content: "";
-      position: absolute;
-      top: calc(50% - 45px);
-      left: -124px;
-      display: inline-block;
-      width: 90px;
-      height: 90px;
-      border-radius: 50%;
-      border: 2px solid #dd1869;
       background: url("../img/happy.svg") 50% 50% / 60% no-repeat, #fff;
     }
     &:hover:before {
-      background: url("../img/happy-hover.svg") 50% 50% / 60% no-repeat #dd1869;
+      background: url("../img/happy-hover.svg") 50% 50% / 60% no-repeat, #dd1869;
     }
   }
 }
@@ -809,8 +786,6 @@ header {
   color: #130947;
 }
 
-.about_app__title {
-}
 .about_app__subtitle {
   margin: 0 0 20px;
   font-weight: bold;
@@ -861,8 +836,6 @@ header {
   margin: 0 0 12px;
 }
 
-.title {
-}
 .video_container {
   position: relative;
   padding: 55px 0;
@@ -912,27 +885,21 @@ header {
     }
     &:hover {
       cursor: pointer;
-      top: calc(50% - 60px);
-      left: calc(50% - 60px);
-      width: 120px;
-      height: 120px;
+
       &:before {
-        top: -20px;
-        left: -20px;
+        top: -15px;
+        left: -15px;
         width: 160px;
         height: 160px;
       }
       &:after {
-        top: -22.5px;
-        left: -22.5px;
+        top: -17.5px;
+        left: -17.5px;
         width: 165px;
         height: 165px;
       }
     }
   }
-}
-
-.function__title {
 }
 
 .function__subtitle {
@@ -942,9 +909,6 @@ header {
   line-height: 30px;
   color: #130947;
   text-align: left;
-}
-
-.subtitle {
 }
 
 .function__row_1 {
@@ -1722,5 +1686,23 @@ header {
   .about_app__info .item_box::before {
     top: calc(50% - 175px);
     height: 350px;
+  }
+  .function__row_1 {
+    flex-direction: column;
+  }
+  .function__info {
+    width: 100%;
+    margin-bottom: 10px;
+  }
+  .function__apps {
+    flex-direction: row;
+    align-items: center;
+    width: 100%;
+  }
+  .about_app__info {
+    width: 100%;
+  }
+  .comment_slider__row1 img {
+    width: 40%;
   }
 }
