--- a/#scorse/scss/style.scss
+++ b/#scorse/scss/style.scss
@@ -101,9 +101,6 @@ header {
   color: #fff;
 }
 
-.services_futures__item {
-}
-
 .leng__link {
   margin: 0 20px 0 0;
 }
@@ -223,15 +220,17 @@ header {
   padding: 15px;
   position: absolute;
   left: 10px;
-  top: 143px;
-  width: 97%;
+  top: 20px;
+  width: calc(100% - 21px);
+  height: auto;
   z-index: 3;
   background: #fff;
-  transform: translateY(-30%);
-  opacity: 0;
-  visibility: hidden;
-  height: auto;
   transition-duration: 500ms;
+  transform: scaleY(0);
+  &._active {
+    transform: scaleY(1);
+    top: 142px;
+  }
   ul {
     text-align: left;
     li {
@@ -244,11 +243,7 @@ header {
       }
     }
   }
-  &._active {
-    transform: translateY(0);
-    opacity: 1;
-    visibility: visible;
-  }
+
   .burger_search__form {
     position: relative;
     .search__window {
@@ -276,6 +271,7 @@ header {
   justify-content: flex-end;
   padding: 0 75px 0 0;
   position: relative;
+  transition-duration: 500ms;
   li {
     margin-left: 25px;
     &:first-child {
@@ -338,56 +334,71 @@ header {
   }
 }
 
+.main_header__item {
+  transition-duration: 500ms;
+}
+
 .main_header__search {
+  position: absolute;
+  top: 0;
+  right: 35px;
+  transition-duration: 500ms;
+  border-left: 1px solid #bbbbbb;
+
   &:after {
     content: "";
+    position: absolute;
+    top: 0px;
+    right: 0;
     display: inline-block;
     height: 100%;
     width: 20px;
-    position: absolute;
-    right: -30px;
-    top: -1px;
-    background-color: rgba(#fff, 0);
-  }
-}
-.search__form {
-  position: absolute;
-  top: 0px;
-  right: 45px;
-  height: 100%;
-
-  transition-duration: 500ms;
-
-  &:focus {
-    opacity: 1;
-    .search__window {
-      transform: translateX(0);
-      padding-left: 10px;
-    }
-  }
-  &:hover {
-    opacity: 1;
-    .search__window {
-      transform: translateX(0);
-      padding-left: 10px;
-    }
+    //background-color: rgba(#fff, 0);
   }
   .search__window {
-    width: 250px;
-    padding-left: 50px;
-    transform: translateX(95%);
-    border-left: 1px solid #bbbbbb;
+    position: absolute;
+    top: 0;
+    right: 15px;
     transition-duration: 500ms;
+    width: 0px;
+    //height: 30px;
+    padding-left: 10px;
+    //transform: translateX(95%);
+    border-left: 1px solid #bbbbbb;
+    &:focus {
+      width: 250px;
+      padding-left: 10px;
+      //transform: translateX(0%);
+    }
   }
-}
-.main_header__sersh_submit {
-  position: absolute;
-  display: inline-block;
-  z-index: 1;
-  top: 0;
-  width: 16px;
-  height: 16px;
-  background: url("../img/search.svg") 50% 50% / 100% no-repeat, #fff;
+
+  &:hover {
+    width: 244px;
+    //transform: translateX(0);
+    .search__window {
+      width: 250px;
+      padding-left: 10px;
+      //transform: translateX(0%);
+    }
+  }
+  &:focus {
+    width: 244px;
+    //transform: translateX(0);
+    .search__window {
+      width: 250px;
+      padding-left: 10px;
+      //transform: translateX(0%);
+    }
+  }
+  .main_header__sersh_submit {
+    position: absolute;
+    right: 0;
+    top: 0;
+    display: inline-block;
+    width: 16px;
+    height: 16px;
+    background: url("../img/search.svg") 50% 50% / 100% no-repeat, #fff;
+  }
 }
 
 .main_header__button {
@@ -1459,7 +1470,7 @@ header {
     display: block;
   }
   .search__form {
-    display: none;
+    top: -10px;
   }
 }
 
